fixed vertical centering on small devices

--- a/style.css
+++ b/style.css
@@ -1,9 +1,20 @@
 @import url('https://fonts.googleapis.com/css?family=Muli:700,700i');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 
+* {
+    box-sizing: border-box;
+}
+
 body {
     margin: 0;
     padding: 0;
+    max-width: 100vw;
+    overflow-x: hidden;
+}
+
+.landing {
+    display: flex;
+    flex-direction: column;
     height: 100vh;
 }
 
@@ -12,7 +23,8 @@ body {
     align-items: center;
     justify-content: center;
     background-color: #e0e0e0;
-    height: 100%;
+    width: 100%;
+    flex-grow: 1;
 }
 
 h1 {
@@ -26,14 +38,12 @@ h1 {
 }
 
 .footer-links {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    width: 100%;
     background-color: #333;
     padding: 4px;
     text-align: center;
     font: 400 0.9em 'Open Sans', sans-serif;
+    margin: 0;
 }
 
 .footer-links a {
